--- a/app/src/main/res/layout/learn_pitch.xml
+++ b/app/src/main/res/layout/learn_pitch.xml
@@ -21,6 +21,13 @@
         android:layout_marginTop="@dimen/dp_116"
         android:src="@drawable/pitch" />
 
+    <Button
+        android:layout_alignParentRight="true"
+        android:onClick="learnChildSong"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="学儿歌" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -35,7 +42,6 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_55"
             android:layout_marginTop="@dimen/dp_26"
-            android:background="@color/colorAccent"
             android:orientation="horizontal">
 
             <ImageView
@@ -104,6 +110,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/im_do"
                 android:layout_width="0dp"
                 android:layout_height="@dimen/dp_50"
                 android:layout_gravity="bottom"
@@ -111,9 +118,11 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:scaleType="centerInside"
-                android:src="@drawable/yyqijian15" />
+                android:src="@drawable/yyqijian15"
+                android:visibility="invisible" />
 
             <ImageView
+                android:id="@+id/im_re"
                 android:layout_width="0dp"
                 android:layout_height="@dimen/dp_50"
                 android:layout_gravity="bottom"
@@ -121,9 +130,11 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:scaleType="centerInside"
-                android:src="@drawable/yyqijian14" />
+                android:src="@drawable/yyqijian14"
+                android:visibility="invisible" />
 
             <ImageView
+                android:id="@+id/im_mi"
                 android:layout_width="0dp"
                 android:layout_height="@dimen/dp_50"
                 android:layout_gravity="bottom"
@@ -131,9 +142,11 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:scaleType="centerInside"
-                android:src="@drawable/yyqijian19" />
+                android:src="@drawable/yyqijian19"
+                android:visibility="invisible" />
 
             <ImageView
+                android:id="@+id/im_fa"
                 android:layout_width="0dp"
                 android:layout_height="@dimen/dp_50"
                 android:layout_gravity="bottom"
@@ -141,9 +154,11 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:scaleType="centerInside"
-                android:src="@drawable/yyqijian18" />
+                android:src="@drawable/yyqijian18"
+                android:visibility="invisible" />
 
             <ImageView
+                android:id="@+id/im_sol"
                 android:layout_width="0dp"
                 android:layout_height="@dimen/dp_50"
                 android:layout_gravity="bottom"
@@ -151,9 +166,11 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:scaleType="centerInside"
-                android:src="@drawable/yyqijian17" />
+                android:src="@drawable/yyqijian17"
+                android:visibility="invisible" />
 
             <ImageView
+                android:id="@+id/im_la"
                 android:layout_width="0dp"
                 android:layout_height="@dimen/dp_50"
                 android:layout_gravity="bottom"
@@ -161,9 +178,11 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:scaleType="centerInside"
-                android:src="@drawable/yyqijian16" />
+                android:src="@drawable/yyqijian16"
+                android:visibility="invisible" />
 
             <ImageView
+                android:id="@+id/im_si"
                 android:layout_width="0dp"
                 android:layout_height="@dimen/dp_50"
                 android:layout_gravity="bottom"
@@ -171,9 +190,11 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:scaleType="centerInside"
-                android:src="@drawable/yyqijian13" />
+                android:src="@drawable/yyqijian13"
+                android:visibility="invisible" />
 
             <ImageView
+                android:id="@+id/im_dol"
                 android:layout_width="0dp"
                 android:layout_height="@dimen/dp_50"
                 android:layout_gravity="bottom"
@@ -181,7 +202,8 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:scaleType="centerInside"
-                android:src="@drawable/yyqijian12" />
+                android:src="@drawable/yyqijian12"
+                android:visibility="invisible" />
         </LinearLayout>
         <!--//android:layout_marginTop="@dimen/hand_tb_margin_top"-->
         <LinearLayout
