--- a/app/src/main/res/layout/start_learn_song.xml
+++ b/app/src/main/res/layout/start_learn_song.xml
@@ -10,13 +10,18 @@
         android:layout_height="match_parent" />
 
     <!--yy0128ds_8-->
-    <ImageView
-        android:id="@+id/bg_wuxianpu"
+    <FrameLayout
+        android:id="@+id/fl_add_pitch"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_200"
-        android:layout_marginTop="@dimen/dp_28"
-        android:src="@drawable/wuxianpu" />
+        android:layout_height="wrap_content">
 
+        <ImageView
+            android:id="@+id/bg_wuxianpu"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_200"
+            android:layout_marginTop="@dimen/dp_28"
+            android:src="@drawable/wuxianpu" />
+    </FrameLayout>
     <!--  <ImageView
           android:layout_width="@dimen/dp_69"
           android:layout_height="@dimen/dp_200"
