--- a/app/src/main/res/layout/start_learn_song.xml
+++ b/app/src/main/res/layout/start_learn_song.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/bg_im"
+    <VideoView
+        android:id="@+id/bg_video"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -25,14 +25,22 @@
 
     <ImageView
         android:id="@+id/im_play_pause"
-        android:layout_width="@dimen/dp_60"
-        android:layout_height="@dimen/dp_60"
-        android:layout_alignParentRight="true"
+        android:layout_width="@dimen/dp_40"
+        android:layout_height="@dimen/dp_40"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="@dimen/dp_20"
+        android:layout_marginEnd="@dimen/dp_95"
         android:src="@drawable/yyqijian29" />
+
     <ImageView
-        android:layout_width="@dimen/dp_160"
-        android:layout_height="@dimen/dp_160"
+        android:id="@+id/im_home"
+        android:layout_width="@dimen/dp_80"
+        android:layout_height="@dimen/dp_80"
         android:layout_alignParentBottom="true"
-        android:src="@drawable/music_bear_1" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="@dimen/dp_20"
+        android:layout_marginEnd="@dimen/dp_45"
+        android:src="@drawable/home" />
+
 </RelativeLayout>
