--- a/app/src/main/res/layout/start_learn_song.xml
+++ b/app/src/main/res/layout/start_learn_song.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <VideoView
+    <com.gerryrun.childeducation.customview.FullVideoView
         android:id="@+id/bg_video"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
@@ -20,6 +20,9 @@
             android:id="@+id/bg_wuxianpu"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_198"
+            android:paddingLeft="@dimen/dp_8"
+            android:paddingRight="@dimen/dp_8"
+            android:scaleType="fitCenter"
             android:src="@drawable/wuxianpu" />
     </FrameLayout>
 
@@ -27,20 +30,20 @@
         android:id="@+id/im_play_pause"
         android:layout_width="@dimen/dp_40"
         android:layout_height="@dimen/dp_40"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="@dimen/dp_20"
+        android:layout_alignParentBottom="true"
         android:layout_marginEnd="@dimen/dp_95"
+        android:layout_marginBottom="@dimen/dp_20"
         android:src="@drawable/yyqijian29" />
 
     <ImageView
         android:id="@+id/im_home"
-        android:layout_width="@dimen/dp_80"
-        android:layout_height="@dimen/dp_80"
-        android:layout_alignParentBottom="true"
+        android:layout_width="@dimen/dp_40"
+        android:layout_height="@dimen/dp_40"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="@dimen/dp_20"
+        android:layout_alignParentBottom="true"
         android:layout_marginEnd="@dimen/dp_45"
+        android:layout_marginBottom="@dimen/dp_20"
         android:src="@drawable/home" />
 
 </RelativeLayout>
