--- a/app/src/main/res/layout/start_learn_song.xml
+++ b/app/src/main/res/layout/start_learn_song.xml
@@ -30,20 +30,27 @@
         android:id="@+id/im_play_pause"
         android:layout_width="@dimen/dp_40"
         android:layout_height="@dimen/dp_40"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="@dimen/dp_95"
+        android:layout_alignParentEnd="true"
         android:layout_marginBottom="@dimen/dp_20"
-        android:src="@drawable/yyqijian29" />
+        android:layout_marginEnd="@dimen/dp_95"
+        android:src="@drawable/music_bofang_dainjiqian" />
 
     <ImageView
         android:id="@+id/im_home"
         android:layout_width="@dimen/dp_40"
         android:layout_height="@dimen/dp_40"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="@dimen/dp_45"
+        android:layout_alignParentEnd="true"
         android:layout_marginBottom="@dimen/dp_20"
+        android:layout_marginEnd="@dimen/dp_45"
         android:src="@drawable/home" />
 
+    <ImageView
+        android:id="@+id/im_music_bear"
+        android:layout_width="@dimen/dp_135"
+        android:layout_height="@dimen/dp_164"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:src="@drawable/music_bear_1" />
 </RelativeLayout>
