--- a/app/src/main/res/layout/learn_pitch.xml
+++ b/app/src/main/res/layout/learn_pitch.xml
@@ -1,8 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/music_xueyingaobeijng1">
+    android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/im_animation"
+        android:layout_width="@dimen/dp_164"
+        android:layout_height="@dimen/dp_116"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="@dimen/dp_32"
+        android:layout_marginTop="@dimen/dp_8"
+        android:scaleType="fitCenter" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/music_xueyingaobeijng1" />
 
     <ImageView
         android:id="@+id/im_go_home"
@@ -12,19 +25,12 @@
         android:layout_marginTop="@dimen/dp_17"
         android:src="@drawable/music_homepage" />
 
-    <ImageView
-        android:id="@+id/im_animation"
-        android:layout_width="@dimen/dp_164"
-        android:layout_height="@dimen/dp_116"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="@dimen/dp_32"
-        android:layout_marginTop="@dimen/dp_8" />
 
     <ImageView
         android:layout_width="@dimen/dp_78"
         android:layout_height="@dimen/dp_116"
-        android:layout_marginLeft="@dimen/dp_18"
         android:layout_marginStart="@dimen/dp_18"
+        android:layout_marginLeft="@dimen/dp_18"
         android:layout_marginTop="@dimen/dp_116"
         android:src="@drawable/pitch" />
 
@@ -32,8 +38,8 @@
         android:layout_width="@dimen/dp_90"
         android:layout_height="@dimen/dp_58"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="@dimen/dp_16"
         android:layout_marginTop="@dimen/dp_7"
+        android:layout_marginEnd="@dimen/dp_16"
         android:background="@drawable/music_xueerge"
         android:onClick="learnChildSong"
         android:scaleType="centerInside" />
@@ -56,8 +62,8 @@
             android:layout_width="@dimen/dp_37"
             android:layout_height="@dimen/dp_37"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="@dimen/dp_4_5"
             android:layout_marginStart="@dimen/dp_109"
+            android:layout_marginBottom="@dimen/dp_4_5"
             android:gravity="center"
             android:scaleType="centerInside"
             android:src="@drawable/yyqijian15"
@@ -69,8 +75,8 @@
             android:layout_height="@dimen/dp_37"
             android:layout_alignParentBottom="true"
             android:layout_gravity="bottom"
-            android:layout_marginBottom="@dimen/dp_12"
             android:layout_marginStart="@dimen/dp_164"
+            android:layout_marginBottom="@dimen/dp_12"
             android:gravity="center"
             android:scaleType="centerInside"
             android:src="@drawable/yyqijian14"
@@ -82,8 +88,8 @@
             android:layout_height="@dimen/dp_37"
             android:layout_alignParentBottom="true"
             android:layout_gravity="bottom"
-            android:layout_marginBottom="@dimen/dp_24"
             android:layout_marginStart="@dimen/dp_218"
+            android:layout_marginBottom="@dimen/dp_24"
             android:gravity="center"
             android:scaleType="centerInside"
             android:src="@drawable/yyqijian19"
@@ -95,8 +101,8 @@
             android:layout_height="@dimen/dp_37"
             android:layout_alignParentBottom="true"
             android:layout_gravity="bottom"
-            android:layout_marginBottom="@dimen/dp_35"
             android:layout_marginStart="@dimen/dp_273"
+            android:layout_marginBottom="@dimen/dp_35"
             android:gravity="center"
             android:scaleType="centerInside"
             android:src="@drawable/yyqijian18"
@@ -119,8 +125,8 @@
             android:layout_width="@dimen/dp_37"
             android:layout_height="@dimen/dp_37"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="@dimen/dp_221"
             android:layout_marginTop="@dimen/dp_27"
+            android:layout_marginEnd="@dimen/dp_221"
             android:gravity="center"
             android:scaleType="centerInside"
             android:src="@drawable/yyqijian16"
@@ -131,8 +137,8 @@
             android:layout_width="@dimen/dp_37"
             android:layout_height="@dimen/dp_37"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="@dimen/dp_167"
             android:layout_marginTop="@dimen/dp_15"
+            android:layout_marginEnd="@dimen/dp_167"
             android:gravity="center"
             android:scaleType="centerInside"
             android:src="@drawable/yyqijian13"
@@ -144,8 +150,8 @@
             android:layout_height="@dimen/dp_37"
             android:layout_alignParentEnd="true"
             android:layout_gravity="bottom"
-            android:layout_marginEnd="@dimen/dp_112"
             android:layout_marginTop="@dimen/dp_3_5"
+            android:layout_marginEnd="@dimen/dp_112"
             android:gravity="center"
             android:scaleType="centerInside"
             android:src="@drawable/yyqijian12"
